--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/config.js" class="remove"></script>
   <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
   <script>document.title = respecConfig.title</script>
-  <title>TODO: Vul hier de titel in</title>
+  <title>Alle informatiemodellen van Geonovum bij elkaar</title>
   <link rel="shortcut icon" type="image/x-icon" href="https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico" />
   <script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
   <!-- De volgende regel zorgt ervoor dat plaatjes uit Imvertor niet geschaald
@@ -21,10 +21,9 @@
   <section id="abstract" data-include-format="markdown" data-include="abstract.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
-  <!-- TODO: voeg hier je eigen hoofdstukken toe -->
-  <section data-include-format="markdown" data-include="ch01.md" class="informative"></section>
-  <section data-include-format="markdown" data-include="ch02.md"></section>
-  <section data-include-format="markdown" data-include="mermaid.md"></section>
+  <!-- Als je document een door imvertor gegenereerde catalogus bevat kan je die -->
+  <!-- opnemen door de volgende regel uit commentaarhaakjes te halen en aan te passen -->
+  <div id="catalogus" data-include="data/TODO-cat.respec.html" data-include-replace=true></div>
 
   <section id='conformance'></section>
   <section id='tof'></section>
