typo in config en andere kleine dingen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
   <!-- Als je document een door imvertor gegenereerde catalogus bevat kan je die -->
   <!-- opnemen door de volgende regel uit commentaarhaakjes te halen en aan te passen -->
-  <div id="catalogus" data-include="data/TODO-cat.respec.html" data-include-replace=true></div>
+  <div id="catalogus" data-include="data/mim-cat.respec.html" data-include-replace=true></div>
+  <div id="catalogus" data-include="data/geonovum-cat.respec.html" data-include-replace=true></div>
+  <div id="catalogus" data-include="data/dso-cim-ow-cat.respec.html" data-include-replace=true></div>
+  <div id="catalogus" data-include="data/IMG-cat.respec.html" data-include-replace=true></div>
+
 
   <section id='conformance'></section>
   <section id='tof'></section>
